# talon

./: .gitignore  .tukan.cards  config.py  dev.py  main.py  package-lock.json  pyproject.toml
agent/domain/: model.py  ports.py
agent/services/: input_handler.py  orchestrator.py
agent/tools/: __init__.py  filesystem.py  registry.py  shell.py
conversation/domain/: model.py
conversation/services/: compaction.py  session.py
docs/: ARCHITECTURE.md  HEXAGONAL_ARCHITECTURE.md  architecture.excalidraw
gateways/telegram/: formatting.py  handlers.py  heartbeat_delivery.py  typing_indicator.py
heartbeat/domain/: evaluate.py  model.py  ports.py
heartbeat/services/: runner.py  scheduler.py  task_runner.py
inference/adapters/: claude_agent_sdk.py  openai_compatible.py  openrouter.py
skills/agent-browser/: SKILL.md
skills/tukan/: SKILL.md
